# libonvif

./: .gitignore  CMakeLists.txt  README.md
assets/scripts/: compile
libonvif/: CMakeLists.txt  LibOnvifConfig.cmake  LibOnvifConfig.cmake.in
libonvif/include/: cencode.h  getopt-win.h  onvif.h  onvif_data.h  session.h  sha1.h
libonvif/include/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  uri.h  writer.h
libonvif/include/rapidjson/error/: en.h  error.h
libonvif/include/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
libonvif/include/rapidjson/msinttypes/: inttypes.h  stdint.h
libonvif/src/: cencode.c  onvif.c  sha1.c
onvif-gui/gui/onvif/: ptztab.py
onvif-util/: CMakeLists.txt
onvif-util/src/: onvif-util.cpp
